amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-enum.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-enum.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#empty-enum
  Message: Enum definitions must have at least one value
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-enum.api.graphql#/declares/scalar/Season
  Property: 
  Range: [(9,0)-(9,11)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#antlr-error
  Message: Syntax error in the following text: '}'
  Severity: Violation
  Target: 
  Property: 
  Range: [(10,0)-(10,1)]
  Location: 
